agrego la resolucion del ejercicio 11 y 12

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Prueba de ejercicios TP2</title>
 </head>
 <body>
-    <script src="ejercicios10.js"></script>
+    <script src="ejercicio11.js"></script>
 </body>
 </html>
